Organização dos Arquivos em Pastas, pequenas alterações no main.css e adicionado README.me.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <title>Dashboard Responsivo</title>
 
 </head>
@@ -71,7 +71,7 @@
             </div>
             <!-- Imagem de Usuário/User Img -->
             <div class="user">
-                <img src="user.jpg" alt="Avatar do Usuário">
+                <img src="assets/img/user.jpg" alt="Avatar do Usuário">
             </div>
         </div>
         <!-- Cartões/Cards -->
@@ -182,42 +182,42 @@
                 </div>
                 <table>
                     <tr>
-                        <td width="60px"><div class="imgBx"><img src="img1.jpg" alt=""></div></td>
+                        <td width="60px"><div class="imgBx"><img src="assets/img/img1.jpg" alt=""></div></td>
                         <td><h4>David<br><span>Itália</span></h4></td>
                     </tr>
                     <tr>
-                        <td width="60px"><div class="imgBx"><img src="img2.jpg" alt=""></div></td>
+                        <td width="60px"><div class="imgBx"><img src="assets/img/img2.jpg" alt=""></div></td>
                         <td><h4>Augusto<br><span>Brasil</span></h4></td>
                     </tr>
                     <tr>
-                        <td width="60px"><div class="imgBx"><img src="img3.jpg" alt=""></div></td>
+                        <td width="60px"><div class="imgBx"><img src="assets/img/img3.jpg" alt=""></div></td>
                         <td><h4>Maria<br><span>Portugal</span></h4></td>
                     </tr>
                     <tr>
-                        <td width="60px"><div class="imgBx"><img src="img4.jpg" alt=""></div></td>
+                        <td width="60px"><div class="imgBx"><img src="assets/img/img4.jpg" alt=""></div></td>
                         <td><h4>Fernanda<br><span>Itália</span></h4></td>
                     </tr>
                     <tr>
-                        <td width="60px"><div class="imgBx"><img src="img5.jpg" alt=""></div></td>
+                        <td width="60px"><div class="imgBx"><img src="assets/img/img5.jpg" alt=""></div></td>
                         <td><h4>David<br><span>Itália</span></h4></td>
                     </tr>
                     <tr>
-                        <td width="60px"><div class="imgBx"><img src="img6.jpg" alt=""></div></td>
+                        <td width="60px"><div class="imgBx"><img src="assets/img/img6.jpg" alt=""></div></td>
                         <td><h4>Ashaf<br><span>Índia</span></h4></td>
                     </tr>
                     <tr>
-                        <td width="60px"><div class="imgBx"><img src="img7.jpg" alt=""></div></td>
+                        <td width="60px"><div class="imgBx"><img src="assets/img/img7.jpg" alt=""></div></td>
                         <td><h4>Diana<br><span>Malasia</span></h4></td>
                     </tr>
                     <tr>
-                        <td width="60px"><div class="imgBx"><img src="img8.jpg" alt=""></div></td>
+                        <td width="60px"><div class="imgBx"><img src="assets/img/img8.jpg" alt=""></div></td>
                         <td><h4>Amit<br><span>Índia</span></h4></td>
                     </tr>
                 </table>
             </div>
         </div>
-
     </div>
+
 </div>
 
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
